# expense_tracker

./: .gitignore  README.md  TODO.md  pyproject.toml
config/: README.md  categorization_rules.example.json
data/: transactions.db
scripts/: init_db.py
src/expense_tracker/: cli.py
src/expense_tracker/categorization/: __init__.py  base.py  categories.py  categorizer.py  rules.py
src/expense_tracker/config/: settings.py
src/expense_tracker/config/defaults/: parsers.json  rules.json
src/expense_tracker/database/: connection.py  schema.sql
src/expense_tracker/domain/: enums.py  models.py
src/expense_tracker/parsers/: amex_excel.py  base.py  cibc_costco_credit.py  factory.py
src/expense_tracker/repositories/: base.py  sqlite_transaction_repository.py
src/expense_tracker/services/: models.py  transaction_service.py
tests/: conftest.py
tests/integration/: test_amex_parser_e2e.py  test_cibc_costco_credit_card_e2e.py  test_parser_factory_e2e.py  test_sqlite_transaction_repository.py
tests/unit/: test_amex_parser.py  test_categorization_engine.py  test_cibc_costco_credit_card_parser.py  test_parser_factory.py  test_transaction_service.py
