[project]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Georges",email = "georges.elboutros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.21.0,<0.22.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "xlrd (>=2.0.2,<3.0.0)"
]

[project.scripts]
expense-tracker = "expense_tracker.cli:cli_main"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
lint = [
    "ruff (>=0.14.10,<0.15.0)"
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.poetry]
packages = [{include = "expense_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest]
# Markers for organizing tests
markers = [
    "unit: Unit tests (fast, isolated, mocked)",
    "integration: Integration tests (slower, uses real files/DB)",
    "slow: Tests that take a long time to run",
    "amex: Tests specific to Amex parser",
]
